--- a/index.html
+++ b/index.html
@@ -523,8 +523,9 @@
 
 			</p>
 			<h2>Responsáveis</h2>
-			<p>Scrum Team</p>
-			<p><i>Stakeholders</i>. Caso não seja possível a presença de todos <i>Stakeholders</i>, 
+			<p>
+			<i>Scrum Team</i>
+			<i>Stakeholders</i>. Caso não seja possível a presença de todos <i>Stakeholders</i>, 
 				apenas a presença do <i> Product Owner</i>, para representatividade dos <i>Stakeholders</i>.</p>
 			<h2>Entradas e saídas</h2>
 			<h3>Entrada</h3>
