--- a/index.html
+++ b/index.html
@@ -443,8 +443,7 @@
 		</section>
 
 		<section class="topic" id="topico_realizar_reuniao_periodica">
-			<h1>
-				A6. Realizar reunião periódica</h1>
+			<h1>A6. Realizar reunião periódica</h1>
 			<a href="#diagrama_scrum" class="blue round" id="voltar">Voltar para o diagrama</a>
 			<hr />
 			<h2>Descrição</h2>
@@ -524,9 +523,8 @@
 			</p>
 			<h2>Responsáveis</h2>
 			<p>
-			<i>Scrum Team</i>
-			<i>Stakeholders</i>. Caso não seja possível a presença de todos <i>Stakeholders</i>, 
-				apenas a presença do <i> Product Owner</i>, para representatividade dos <i>Stakeholders</i>.</p>
+			<i>Scrum Team</i> e os <i>Stakeholders</i>. Caso não seja possível a presença de todos <i>Stakeholders</i>, 
+			apenas a presença do <i> Product Owner</i>, para representatividade dos <i>Stakeholders</i>.</p>
 			<h2>Entradas e saídas</h2>
 			<h3>Entrada</h3>
 			<ul>
