--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 		</section>
 
 		<section class="topic" id="topico_conferir_novas_necessidades">
-			<h1>A10 Conferir se há novas necessidades de mudança</h1>
+			<h1>A10. Conferir se há novas necessidades de mudança</h1>
 			<a href="#diagrama_scrum" class="blue round" id="voltar">Voltar para o diagrama</a>
 			<hr />
 			<h2>Descrição</h2>
