atualizando titulo da pagina

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <a href="#diagrama_scrum" class="subir bot_voltar" id="voltar">👆️ Diagrama</a>
-	<h1>Clique nas atividades para ver detalhes!</h1>
+	<h1>Processo de Manutenção de Software da FSA - IFSP/PEP</h1>
 	<div id="diagrama_scrum">
 		<a href="#topico_elencar_necessidades" id="elencar_necessidades" class="clickable round green"></a>
 		<a href="#topico_criar_product_backlog" id="criar_product_backlog" class="clickable round green"></a>
