--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!--<script type="text/javascript" src="https://livejs.com/live.js"></script>[> Provem live reload <]-->
 	<link rel="shortcut icon" href="./Desenvolvimento/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="./Desenvolvimento/favicon.ico" type="image/x-icon">
-	<title>Processo de Desenvolvimento da Fábrica de Software Acadêmica</title>
+	<title>Processo de Manutenção FSA</title>
 </head>
 
 <body>
