Alterado o botão Customizar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input id="input_mostrar" onclick="mostrar()" style="margin-top: 10px" type="checkbox"> Mostrar
     </div>
     <div onclick="costumizar()" class="costumizar" id="costumize">
-        Costumize
+        Customizar
     </div>
     <div class="mostrar_atividade" id="mostrar_atividade">
         Atividade
