--- a/index.html
+++ b/index.html
@@ -812,27 +812,38 @@
 			</p>
 		</section>
 		<section class="topic" id="topico_anexo1">
-			<h1>Anexo I - Product Backlog</h1>
-			<a href="#diagrama_scrum" class="blue round" id="voltar">Voltar para o diagrama</a>
-			<hr/>
-			<img id="anexo1" src="./Desenvolvimento/images/anexo/anexo1.jpg" alt="Anexo I"/>
-            <a class="button" href="./Desenvolvimento/documentacao/Product-Backlog-TEMPLATE.docx" download="Template do Product Backlog">Baixar Documento</a>
-		</section>
-		<section class="topic" id="topico_anexo2">
-			<h1>Anexo II - Sprint Backlog</h1>
+			<div id="download">
+				<h1>Anexo I - Product Backlog</h1>
+				<a class="button" href="./Desenvolvimento/documentacao/Product-Backlog-TEMPLATE.docx"
+					download="Template do Product Backlog">Baixar Documento</a>
+			</div>
 			<a href="#diagrama_scrum" class="blue round" id="voltar">Voltar para o diagrama</a>
 			<hr />
-			<img id="anexo2" src="./Desenvolvimento/images/anexo/anexo2.jpg" alt="Anexo II"/>
-            <a class="button" href="./Desenvolvimento/documentacao/SprintBacklog-TEMPLATE.docx" download="Template do Sprint Backlog">Baixar Documento</a>
+			<img id="anexo1" src="./Desenvolvimento/images/anexo/anexo1.jpg" alt="Anexo I" />
 		</section>
-		<section class="topic" id="topico_anexo3">
-			<h1>Anexo III - Relatório da Sprint</h1>
+
+		<section class="topic" id="topico_anexo2">
+			<div id="download">
+				<h1>Anexo II - Sprint Backlog</h1>
+				<a class="button" href="./Desenvolvimento/documentacao/SprintBacklog-TEMPLATE.docx"
+					download="Template do Sprint Backlog">Baixar Documento</a>
+			</div>
 			<a href="#diagrama_scrum" class="blue round" id="voltar">Voltar para o diagrama</a>
-			<hr/>
-			<img id="anexo3" src="./Desenvolvimento/images/anexo/anexo3.jpg" alt="Anexo III"/>
-            <a class="button" href="./Desenvolvimento/documentacao/RelatórioSprint-TEMPLATE.docx" download="Template do Relatório da Sprint">Baixar Documento</a>
+			<hr />
+			<img id="anexo2" src="./Desenvolvimento/images/anexo/anexo2.jpg" alt="Anexo II" />
 		</section>
-	</section>
+
+		<section class="topic" id="topico_anexo3">
+			<div id="download">
+				<h1>Anexo III - Relatório da Sprint</h1>
+				<a class="button" href="./Desenvolvimento/documentacao/RelatórioSprint-TEMPLATE.docx"
+					download="Template do Relatório da Sprint">Baixar Documento</a>
+			</div>
+			<a href="#diagrama_scrum" class="blue round" id="voltar">Voltar para o diagrama</a>
+			<hr />
+			<img id="anexo3" src="./Desenvolvimento/images/anexo/anexo3.jpg" alt="Anexo III" />
+		</section>
+		</section>
 
 	</div>
 </body>
